Nu med item og mmsId

--- a/cloudapp/src/app/convert-to-digital/convert-to-digital.component.scss
+++ b/cloudapp/src/app/convert-to-digital/convert-to-digital.component.scss
@@ -1,3 +1,23 @@
 button {
   margin-right: 1em;
 }
+
+.selectedTitle {
+  display: block;
+  padding-bottom: 1em;
+}
+
+.invisible {
+  display: block;
+  visibility: hidden;
+  height: 0;
+  width: 0;
+}
+textarea {
+  width: 50em;
+  height: 15em;
+}
+
+#ngSummarySectionContainer {
+  position: absolute;
+}
