--- a/cloudapp/src/app/convert-to-digital/convert-to-digital.component.html
+++ b/cloudapp/src/app/convert-to-digital/convert-to-digital.component.html
@@ -1,32 +1,51 @@
 <app-topmenu></app-topmenu>
-<div *ngIf="!hasRSRequest && !chooseFromList">
-    <p>
-        To use this app, navigate to the Borrowing Requests page in Alma.
-        From there is will be possible to change a Book Request to an Article Request and vice versa.
-    </p>
+
+<mat-icon class="info-icon" (click)="toggleShowExample()" color="primary">info</mat-icon><br>
+<span>ItemId: {{tmpItemId}}</span><br>
+<button mat-raised-button color="secondary" (click)="saveItemIdToForm()" [disabled]="!tmpItemId===''">Use this Item</button>
+
+<div *ngIf="showExample">
+    <mat-divider></mat-divider><br>
+    <span>A swift way of converting a borrowing request, with a matching local ressource to digitization request</span><br>
+    <span>...you need to:</span><br><br>
+    <span>1. Navigate to "Borrowing Requets" page in Alma.</span><br>
+    <span>2. Select the Borrowing Request in the cloud app.</span><br>
+    <span>3. Click "View local Ressource" for the item.</span><br>
+    <span>4. Select the appropriate resource in the cloud app.</span><br>
+    <span>5. Click "Convert to digitization Request" in the cloud app.</span><br><br>
+    <mat-divider></mat-divider><br>
 </div>
-<div class="eca-actions" *ngIf="hasRSRequest">
-    <button mat-flat-button color="primary" (click)="changeType()" [disabled]="!isChangeable">
-        Change to {{citationTypeCode ==='BK' ? 'an' : 'a'}} {{ citationTypeMap.get(bookToArticalSwap.get(citationTypeCode)) }} request
-    </button>
+
+<div *ngIf="!borrowingRequestSelected && !showBorrowingRequestSelectbox">
+    <p>
+        Please navigate to the Borrowing Requests page in Alma.
+    </p>
 </div>
 
 <div class="align-center">
-    <h4 [innerHTML]='title'></h4>
+    <h4 [innerHTML]='infoText'></h4>
+</div>
+
+<div class="align-center">
+    <span>selectedBorrowingRequestlink: </span>
+    <h4 [innerHTML]='selectedBorrowingRequestlink'></h4>
+</div>
+
+<div class="align-center">
+    <span>selectedUserRequestlink: </span>
+    <h4 [innerHTML]='selectedUserRequestlink' ></h4>
 </div>
 
 <div class="loading-shade" *ngIf="loading">
     <mat-progress-spinner mode="indeterminate" diameter="50"></mat-progress-spinner>
 </div>
 
-<div class="example-container">
-    <div class="form-container">
+    <div class="form-container" *ngIf="showBorrowingRequestSelectbox || isChangeable">
         <form [formGroup]='formConvertHelper.getForm()' (submit)="submit()">
-            <div *ngIf="chooseFromList" >
-                <h4 [hidden]="!formConvertHelper.isRequestSelected()">Select Borrowing Request</h4>
+            <div *ngIf="showBorrowingRequestSelectbox else showSelectedItemTitle">
                 <mat-form-field appearance="outline">
-                    <mat-label>Select borrowing request</mat-label>
-                    <mat-select (selectionChange)="onLoadEntity($event.value)" >
+                    <mat-label>Borrowing request</mat-label>
+                    <mat-select (selectionChange)="findBorrowingRequestData($event.value)" >
                         <mat-option [value]="0">None</mat-option>
                         <mat-option *ngFor="let entity of pageEntities" [value]="entity">
                             {{entity.description| truncate : 50}} - {{entity.id}}
@@ -34,36 +53,58 @@
                     </mat-select>
                 </mat-form-field>
             </div>
+            <ng-template #showSelectedItemTitle>
+                <span class="selectedTitle" [innerHTML]="selectedItemTitle"></span>
+            </ng-template>
 
-            <mat-form-field class="form-field" appearance="outline">
+<!--            <mat-form-field class="invisible" appearance="outline">-->
+            <mat-form-field class="" appearance="outline">
                 <mat-label>User Id</mat-label>
                 <input matInput formControlName="userId" type="text" [required]="true">
             </mat-form-field>
-            <mat-form-field class="form-field" appearance="outline">
+<!--            <mat-form-field class="invisible" appearance="outline">-->
+            <mat-form-field class="" appearance="outline">
                 <mat-label>Request Id</mat-label>
                 <input matInput formControlName="requestId" type="text" [required]="true">
             </mat-form-field>
             <div [hidden]="formConvertHelper.isRequestSelected()">
-                <h4>Find local ressource with 'View Local Resssouce' for the Borrowing Request in question</h4>
-                <mat-form-field class="form-field" appearance="outline" [hidden]="formConvertHelper.isRequestSelected()">
+                <mat-form-field class="form-field" appearance="outline">
+                    <mat-label>MMS ID</mat-label>
+                    <input matInput formControlName="mmsId" type="text" [required]="true">
+                </mat-form-field>
+                <mat-form-field class="form-field" appearance="outline">
                     <mat-label>Record Id</mat-label>
-                    <input matInput formControlName="recordId" type="text" [required]="true">
+                    <input matInput formControlName="recordId" type="text" [required]="">
                 </mat-form-field>
                 <mat-form-field class="form-field" appearance="outline">
                     <mat-label>Item Id</mat-label>
                     <input matInput formControlName="itemId" type="text" [required]="" >
                 </mat-form-field>
             </div>
+
             <!--
                             <mat-error *ngIf="loginForm.controls.password.touched && loginForm.controls.password.invalid">
                                 <span *ngIf="loginForm.controls.password.errors.required">This field is mandatory.</span>
                             </mat-error>
             -->
-            <button mat-raised-button color="primary" type="submit">Convert to digitization request</button>
-            <button mat-raised-button color="secondary" (click)="resetForm()">Reset</button>
+            <button mat-raised-button color="primary" type="submit" [disabled]="!isChangeable">Convert to digitization request</button>
+            <button mat-raised-button color="secondary" (click)="resetForm()">Change Type (ORIGINAL)</button>
         </form>
-<!--        <button (click)="resetForm()">Test</button>  TODO: select-box nulstilles ikke -->
+        <br>
+        <textarea>{{toTextArea}}</textarea>
+        <div *ngIf="showBibSelectbox ">
+            <mat-form-field appearance="outline">
+                <mat-label>BIB et eller andet</mat-label>
+                <mat-select (selectionChange)="findBibData($event.value)" >
+                    <mat-option [value]="0">None</mat-option>
+                    <mat-option *ngFor="let entity of pageEntities" [value]="entity">
+                        {{entity.description| truncate : 50}} - {{entity.id}}
+                    </mat-option>
+                </mat-select>
+            </mat-form-field>
+        </div>
+
+        <!--        <button (click)="resetForm()">Test</button>  TODO: select-box nulstilles ikke -->
     </div>
-</div>
 
 
