Before removal of form.

--- a/cloudapp/src/app/configuration/configuration.component.html
+++ b/cloudapp/src/app/configuration/configuration.component.html
@@ -1,21 +1,33 @@
 <app-topmenu>
 </app-topmenu>
 
-<h3 class="subheading-1">Create new setting:</h3>
+<mat-icon class="info-icon" (click)="toggleShowExample()" color="primary">info</mat-icon><br>
+
+<div *ngIf="showExample">
+    <mat-divider></mat-divider><br>
+    <span>This is the configuration page for "Convert Borrowing Request to Digitization"-part of this cloudApp.</span><br>
+    <span>The idea is, that you as administrator has to enter all valid location codes here one by one.</span><br><br>
+    <span>Location codes are removed by clicking at the corresponding garbage can.</span><br><br>
+    <span>NB!: If all location codes in your library are valid for digitization, you create one single code named '<b>*</b>' (only the star).</span><br>
+    <mat-divider></mat-divider><br>
+</div>
+
+<h3 class="subheading-1">Create digitization configuration:</h3>
 <mat-form-field appearance="outline">
-    <mat-label>(Part of) Location-name</mat-label>
+    <mat-label>Location code</mat-label>
     <input matInput [(ngModel)]="newLocation"  [maxLength]="50">
 </mat-form-field>
 <div mat-dialog-actions>
-    <button mat-raised-button color="primary" (click)="saveNewLocation()">Save Location</button>
+    <button mat-raised-button color="primary" (click)="saveNewLocation()">Save location code</button>
 </div><br>
 
 
-<h3 class="subheading-1">Valid digitization localizations settings:</h3>
+<h3 class="subheading-1">Valid localization codes for digitization are:</h3>
 <div *ngIf="settings && settings.locationsUsableForDitization.length>0 else noDigitizationLocations">
     <mat-list *ngFor="let location of settings.locationsUsableForDitization">
         <mat-list-item>
-            <span>{{location}}</span>
+
+            <span>{{location}}</span><span *ngIf="location==='*'&&settings.locationsUsableForDitization.length==1"> (All locations are valid!)</span>
             <!--  TODO: JJEG ExLibris Way(https://developers.exlibrisgroup.com/cloudapps/docs/style/#colors) - dosn't work.
                     <i class="uxf-icon uxf-close eca-button" (click)="remove(item)">delete</i>
             -->
@@ -26,6 +38,6 @@
 
 <ng-template #noDigitizationLocations>
     <div id="emptyList">
-        <p>There are no locations for digitization! Type the new location in the input field and click the 'Save Location'-button.</p>
+        <p>There are no location codes for digitization! Type the new location code in the input field and click the 'Save location code'-button.</p>
     </div>
 </ng-template>
