--- a/cloudapp/src/app/external-localization/external-localization.component.html
+++ b/cloudapp/src/app/external-localization/external-localization.component.html
@@ -1,7 +1,7 @@
 <app-topmenu></app-topmenu>
 
 <div *ngIf="!settingsExists() else showTable">
-    <span>You have not created any 'Link templates' in the settings section of this cloud app.</span><br>
+    <span>You have not created any 'Link templates' in the settings section of this Cloud App.</span><br>
     <b><a [routerLink]="['/settings']">Add link templates test</a></b><br><br>
 </div>
 
