Ready to merge for production - unser-info at converting.

--- a/cloudapp/src/app/configuration/configuration.component.html
+++ b/cloudapp/src/app/configuration/configuration.component.html
@@ -12,7 +12,7 @@
     <mat-divider></mat-divider><br>
 </div>
 
-<h3 class="subheading-1">Create digitization configuration:</h3>
+<h3 class="subheading-1">Add location codes for "Convert Borrowing Request to Digitization Request":</h3>
 <mat-form-field appearance="outline">
     <mat-label>Location code</mat-label>
     <input matInput [(ngModel)]="newLocation"  [maxLength]="50">
