Pages issue fixed.

--- a/cloudapp/src/app/main/main.component.html
+++ b/cloudapp/src/app/main/main.component.html
@@ -1,6 +1,6 @@
 <section>
   <h1>Home</h1>
-  <p>This app is adding tools for fullfilling Borrowing Requests</p>
+  <p>This app is adding tools for fulfilling Borrowing Requests</p>
   <ul>
     <li><a [routerLink]="['external-localization']">External localization</a></li>
     <li><a [routerLink]="['convert-to-digital']">Convert Borrowing Request to Digitization Request</a></li>
