--- a/cloudapp/src/app/configuration/configuration.component.html
+++ b/cloudapp/src/app/configuration/configuration.component.html
@@ -12,7 +12,7 @@
     <mat-divider></mat-divider><br>
 </div>
 
-<h3 class="subheading-1">Select the "attribute-type", that is used for controlling access to creatin digitization requests:</h3>
+<h3 class="subheading-1">Select the "attribute-type", that is used for controlling access to creating digitization requests:</h3>
 <form>
     <input type="radio" value="L" name="valType"  (change)="validationTypeChanged('L')" [ngModel]="selectedValidationType"> Location code <br>
     <input type="radio" value="P" name="valType"  (change)="validationTypeChanged('P')" [ngModel]="selectedValidationType"> Item Policy
