ISSN added to localization

--- a/cloudapp/src/app/settings/settings-dialog/settings-dialog.component.html
+++ b/cloudapp/src/app/settings/settings-dialog/settings-dialog.component.html
@@ -30,6 +30,7 @@
         <mat-radio-button class="settings-control" value="1">ISBN</mat-radio-button><br>
         <mat-radio-button class="settings-control" value="2">Title</mat-radio-button><br>
         <mat-radio-button class="settings-control" value="3">Author</mat-radio-button><br>
+        <mat-radio-button class="settings-control" value="4">ISSN</mat-radio-button><br>
     </mat-radio-group>
 
     <mat-form-field class="linkPart">
